--- a/composer.json
+++ b/composer.json
@@ -36,14 +36,14 @@
         "symfony/config": "^3.4 || ^4.0",
         "symfony/dependency-injection": "^3.4.26 || ^4.1.12",
         "symfony/event-dispatcher": "^3.4 || ^4.0",
-        "symfony/expression-language": "^3.4 || ^4.0",
+        "symfony/expression-language": "^3.4 || ^4.0 || ^5.0",
         "symfony/form": "^3.4 || ^4.0",
         "symfony/http-foundation": "^3.4.35 || ^4.2.12",
-        "symfony/http-kernel": "^3.4 || ^4.0",
+        "symfony/http-kernel": "^3.4 || ^4.4.13",
         "symfony/options-resolver": "^3.4 || ^4.0",
         "symfony/routing": "^3.4 || ^4.0",
         "symfony/security-core": "^3.4 || ^4.1.12",
-        "symfony/templating": "^3.4 || ^4.0",
+        "symfony/templating": "^3.4 || ^4.0 || ^5.0",
         "symfony/translation": "^3.4 || ^4.0",
         "symfony/validator": "^3.4 || ^4.0",
         "terminal42/notification_center": "^1.3.4",
